--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Awesome project",
   "main": "./penguinwalker.js",
   "dependencies": {
-    "priority_queue": "~0.1.3"
+    "priority_queue": "~0.1.3",
+    "simplesets": "~1.2.0"
   }
 }
